Logged-in Performance Profiler: Fix mobile header alignment (#94827)
* ensure the cog is centered in the header on mobile view

* make feature available on wpcalypso

--- a/client/hosting/performance/style.scss
+++ b/client/hosting/performance/style.scss
@@ -25,6 +25,16 @@ $section-max-width: 1224px;
 			padding-top: 24px;
 		}
 	}
+
+	.site-performance__loader {
+		display: flex;
+		flex-direction: column;
+		gap: 64px;
+
+		@media (max-width: $break-medium) {
+			margin-top: 24px;
+		}
+	}
 }
 
 .site-performance-device-tab-controls__container {
@@ -77,6 +87,10 @@ $section-max-width: 1224px;
 
 		.formatted-header__subtitle {
 			display: block;
+		}
+
+		.navigation-header__main {
+			align-items: center;
 		}
 	}
 }
